--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
+    "@tensorflow/tfjs": "^3.15.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
@@ -19,6 +20,7 @@
     "gsap": "^3.7.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.1.0",
     "normalize-wheel": "^1.0.1",
     "portfinder-sync": "0.0.2",
