--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "normalize-wheel": "^1.0.1",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "seedrandom": "^2.4.4",
     "stats.js": "^0.17.0",
     "style-loader": "^3.0.0",
     "three": "^0.130.1",
