--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@babel/core": "^7.14.6",
 		"@babel/preset-env": "^7.14.7",
 		"@tensorflow/tfjs": "^3.15.0",
+		"axios": "^0.27.2",
 		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^9.0.1",
